finished test swagger in the customer and adjustment
